<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityTable">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="56dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tvPrimaryId"
                                android:layout_width="40dp"
                                android:layout_height="wrap_content"
                                android:text="@string/id"
                                android:textAlignment="center"
                                android:textColor="@android:color/black"
                                android:textStyle="bold" />


                            <TextView
                                android:id="@+id/tvQuantity"
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:text="@string/qunt"
                                android:textAlignment="center"
                                android:textColor="@android:color/black"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvListPrice"
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:text="@string/list_price"
                                android:textAlignment="center"
                                android:textColor="@android:color/black"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvDisc"
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:text="@string/discount"
                                android:textAlignment="center"
                                android:textColor="@android:color/black"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvPrice"
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:text="@string/price"
                                android:textAlignment="center"
                                android:textColor="@android:color/black"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvTaxable"
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:text="@string/taxable_value"
                                android:textAlignment="center"
                                android:textColor="@android:color/black"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvTaxRate"
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:text="@string/tax_rate"
                                android:textAlignment="center"
                                android:textColor="@android:color/black"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:text="@string/cgst_sgst"
                                android:textAlignment="center"
                                android:textColor="@android:color/black"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvTotal"
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:text="@string/total_amount"
                                android:textAlignment="center"
                                android:textColor="@android:color/black"
                                android:textStyle="bold" />
                        </LinearLayout>


                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvList"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        </androidx.recyclerview.widget.RecyclerView>

                    </LinearLayout>


                </HorizontalScrollView>


                <View style="@style/Divider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="2"
                        android:text="@string/total_rs"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@android:color/black"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/tvTotalAMT"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="2" />
                </LinearLayout>


            </LinearLayout>

            <View style="@style/Divider" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="25dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <LinearLayout
                    android:id="@+id/layoutGST"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:animateLayoutChanges="true"
                    android:baselineAligned="false"
                    android:elevation="5dp"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="@string/tax_rate"
                            android:textAlignment="center"
                            android:textAllCaps="false"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="@string/taxable_value"
                            android:textAlignment="center"
                            android:textAllCaps="false"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvGST"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="@string/cgst_sgst"
                            android:textAlignment="center"
                            android:textAllCaps="false"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="@string/_18" />

                        <TextView
                            android:id="@+id/tvTax18"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="@string/_0" />

                        <TextView
                            android:id="@+id/tvGST18"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="@string/_0" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="@string/_12" />

                        <TextView
                            android:id="@+id/tvTax12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="@string/_0" />

                        <TextView
                            android:id="@+id/tvGST12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="@string/_0" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="@string/_05" />

                        <TextView
                            android:id="@+id/tvTax5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="@string/_0" />

                        <TextView
                            android:id="@+id/tvGST5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="@string/_0" />


                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutArrow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                    <View
                        android:id="@+id/adjustGST"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="15dp"

                        android:background="@drawable/ic_baseline_arrow_left_24"
                        android:clickable="true"
                        android:focusable="true" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/nav_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>